Fixed the navbar and added toast notifications on login failure

--- a/bookrade/src/css/login.css
+++ b/bookrade/src/css/login.css
@@ -95,6 +95,9 @@
     cursor: pointer;
     color: grey;
 }
+.toast-container {
+    font-size: 14px; 
+  }
 
 @media (max-width: 1200px) {
     .show .image img{
