--- a/bookrade/src/App.css
+++ b/bookrade/src/App.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 * {
   font-family: "Poppins", sans-serif;
   margin: 0;
@@ -28,3 +31,4 @@ html::-webkit-scrollbar-track {
 html::-webkit-scrollbar-thumb {
   background: var(--black);
 }
+
