--- a/bookrade/src/App.css
+++ b/bookrade/src/App.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
 
+
+
 * {
   font-family: "Poppins", sans-serif;
   margin: 0;
@@ -33,4 +35,6 @@ h1, h2, h3{
   font-weight: 500;
 }
 
-
+.content {
+  width: auto;
+}
