--- a/bookrade/src/css/navigation.css
+++ b/bookrade/src/css/navigation.css
@@ -162,6 +162,32 @@ a{
     text-decoration: none;
 }
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  font-weight: 200;
+}
+
+.dropdown-content .link {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content .link:hover {
+  background-color: #ddd;
+}
+
+.profile:hover .dropdown-content{
+  display: block;
+}
+
+
 /* media queries */
 
 @media (max-width: 1048px) {
@@ -176,7 +202,7 @@ a{
   }
 }
 
-@media (max-width: 793px) {
+@media (max-width: 900px) {
   html {
     scroll-padding-top: 0;
   }
@@ -193,7 +219,7 @@ a{
 
   .header-1 {
     box-shadow: var(--box-shadow);
-    position: sticky;
+    /* position: sticky; */
     top: 0;
   }
 
