Search and Filter Books, and Send Trade Request

--- a/bookrade/src/css/footer.css
+++ b/bookrade/src/css/footer.css
@@ -36,7 +36,6 @@
 
 .footer-element .medias a {
     color: white; /* Change link color to white */
-    margin-right: 10px;
     font-size: 20px;
 }
 
@@ -58,7 +57,9 @@
     text-decoration: underline;
 }
 
-.medias {
+.medias{
+    justify-content: center;
     display: flex;
-    margin-left: 160px;
+    flex-wrap: wrap;
+    gap: 10px;
 }
