--- a/bookrade/src/css/uploadbook.css
+++ b/bookrade/src/css/uploadbook.css
@@ -44,6 +44,9 @@
     float: left;
     font-size: 16px;
 }
+.book-form form .form .select {
+    font-size: 16px;
+}
 
 .book-form form .form input:focus{
     border: 2px solid #27ae60;
