--- a/bookrade/src/css/books.css
+++ b/bookrade/src/css/books.css
@@ -1,77 +1,138 @@
-
 .books{
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 50px;
 }
 
-.books .book{
-    padding: 20px;
-    margin: 20px;
-    height: 350px;
-    width: 230px;
-    border-radius: 10px;
-    box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01), 0px 59px 36px rgba(0, 0, 0, 0.05), 0px 26px 26px rgba(0, 0, 0, 0.09), 0px 7px 15px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-    float: left;
-}
+.book-card {
+    width: 260px;
+    padding: 14px;
+    border-radius: 5px;
+    background-color: #fff;
+    margin-bottom: 10px;
+    box-shadow:
+      0 3px 6px rgba(0, 0, 0, 0.16),
+      0 3px 6px rgba(0, 0, 0, 0.23);
+  
+    .book-card__cover {
+      position: relative;
+      width: 200px;
+      height: 300px;
+      margin: 0 auto 8px auto;
+      perspective: 1000px;
+    }
+    
+    .book-card__book {
+      height: 100%;
+      transform-style: preserve-3d;
+      transition: all 250ms ease;
+    }
+  
+    .book-card__book-front {
+      position: absolute;
+      height: 100%;
+    }
+     
+     .book-card__book-back {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        transform: translateZ(-40px);
+     }
+  
+    .book-card__book-side {
+      position: absolute;
+      top: 5px;
+      bottom: 2px;
+      right: -29px;
+      width: 40px;
+      background-size: 5px;
+      background-color: #e1e1e1;
+      background-image: linear-gradient(to right, #ccc 35%, #e1e1e1 35%);
+      opacity: 0;
+      transform: rotate3d(0, 1, 0, 90deg);
+    }
+     
+    .book-card__img {
+      width: 100%;
+      height: 100%;
+      background-color: #e1e1e1;
+    }
+  
+    .book-card__title {
+      font-size: 1.5em;
+      margin-bottom: 8px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap; 
+      width: 140px; 
+  }
+    .book-card__author {
+      color: #757575;
+      font-size: 1em;
+    }
+  
+    &:hover {
+      .book-card__book{
+        transform: rotate3d(0, -1, 0, 30deg) translate(-15px, -30px);
+      }
+      
+      .book-card__book-back {
+        box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.35);
+      }
+      
+      .book-card__book-side {
+        opacity: 1;
+      }
+    }
+  }
 
-.books .book img{
-    height: 230px;
-    margin: auto;
-}
-
-.books .book:hover {
-    transform: scale(1.01);
-    box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.1), 
-                0px 59px 36px rgba(0, 0, 0, 0.15), 
-                0px 26px 26px rgba(0, 0, 0, 0.2), 
-                0px 7px 15px rgba(0, 0, 0, 0.3), 
-                0px 0px 0px rgba(0, 0, 0, 0.3);
-}
-
-.books .book .book_details{
-    padding: 10px 25px;
-    border: 2px solid grey;
-    display: flex;
-}
-.books .book .book_details .text{
-    width: 80%;
-}
-.books .book .book_details .actions{
-    width: 10%;
-}
-.books .book .book_details .actions span{
+.like-book {
     font-size: 2rem;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-    margin-top: 5px;
-    margin-bottom:5px;
-    color: black;
-    cursor: pointer;
+    padding-right: 15px;
 }
-.books .book .book_details .actions .fa-heart:hover{
-    color: rgb(206, 102, 119);
-}
-.books .book .book_details .actions .fa-message:hover{
-    color: rgb(21, 171, 21);
-}
-.books .book .book_details .actions .fa-trash:hover{
-    color: red;
-}
-.books .book .book_details .actions .fa-edit:hover{
-    color: rgb(54, 54, 230);
-}
-.books .book .book_details .text h2{
-    font-size: 15px;
-    font-weight: bold;
-}
-.books .book .book_details .text p{
-    font-size: 10px;
-    color: rgb(107, 107, 107)
-}
-.books .book .book_details .text a{
-    font-size: 12px;
-    font-weight: bold;
-    color: rgb(84, 82, 82)
 
+.like-book span{
+    color: rgb(138, 137, 137);
+}
+
+.like-book span:hover{
+    color: rgb(18, 114, 18);
+}
+
+.send-btn{
+    padding: 5px;
+    color: white;
+    background-color: #219150;
+    border: 2px solid #219150;
+    font-size: 10px;
+    border-radius: 3px;
+    width: 100px;
+    height: 35px;
+    margin-left: -10px;
+}
+
+.send-btn:hover{
+  color: #219150;
+  background-color: white;
+  border: 2px solid #219150;
+}
+
+.unsend-btn{
+    padding: 5px;
+    color: white;
+    background-color: red;
+    border: 2px solid red;
+    font-size: 10px;
+    border-radius: 3px;
+    width: 100px;
+    height: 35px;
+    margin-left: -10px;
+
+}
+
+.unsend-btn:hover{
+    color: red;
+    background-color: white;
 }
