--- a/bookrade/src/css/books.css
+++ b/bookrade/src/css/books.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 50px;
+    padding-left: 10px;
 }
 
 .book-card {
@@ -93,10 +94,6 @@
     padding-right: 15px;
 }
 
-.like-book span{
-    color: rgb(138, 137, 137);
-}
-
 .like-book span:hover{
     color: rgb(18, 114, 18);
 }
@@ -107,7 +104,7 @@
     background-color: #219150;
     border: 2px solid #219150;
     font-size: 10px;
-    border-radius: 3px;
+    border-radius: 5px;
     width: 100px;
     height: 35px;
     margin-left: -10px;
@@ -119,13 +116,31 @@
   border: 2px solid #219150;
 }
 
+.trade-btn{
+  padding: 5px;
+  color: white;
+  background-color: #219150;
+  border: 2px solid #219150;
+  font-size: 13px;
+  border-radius: 5px;
+  width: 200px;
+  height: 35px;
+  margin-left: -10px;
+}
+
+.trade-btn:hover{
+  color: #219150;
+  background-color: white;
+  border: 2px solid #219150;
+}
+
 .unsend-btn{
     padding: 5px;
     color: white;
     background-color: red;
     border: 2px solid red;
     font-size: 10px;
-    border-radius: 3px;
+    border-radius: 5px;
     width: 100px;
     height: 35px;
     margin-left: -10px;
@@ -135,4 +150,28 @@
 .unsend-btn:hover{
     color: red;
     background-color: white;
+}
+
+.cancel-btn{
+  padding: 5px;
+  color: white;
+  background-color: red;
+  border: 2px solid red;
+  font-size: 13px;
+  border-radius: 5px;
+  width: 100px;
+  height: 35px;
+  margin-left: -10px;
+
+}
+
+.cancel-btn:hover{
+  color: red;
+  background-color: white;
+}
+
+.book-preview{
+  padding: 15px;
+  height: 200px;
+
 }
