--- a/bookrade/src/css/books.css
+++ b/bookrade/src/css/books.css
@@ -137,8 +137,8 @@
 .unsend-btn{
     padding: 5px;
     color: white;
-    background-color: red;
-    border: 2px solid red;
+    background-color: rgb(187, 35, 35);
+    border: 2px solid rgb(187, 35, 35);
     font-size: 10px;
     border-radius: 5px;
     width: 100px;
@@ -148,30 +148,46 @@
 }
 
 .unsend-btn:hover{
-    color: red;
+    color: rgb(187, 35, 35);
     background-color: white;
 }
 
 .cancel-btn{
   padding: 5px;
   color: white;
-  background-color: red;
-  border: 2px solid red;
+  background-color: rgb(187, 35, 35);
+  border: 2px solid rgb(187, 35, 35);
   font-size: 13px;
   border-radius: 5px;
-  width: 100px;
+  width: 200px;
   height: 35px;
   margin-left: -10px;
 
 }
 
 .cancel-btn:hover{
-  color: red;
+  color: rgb(187, 35, 35);
   background-color: white;
 }
 
 .book-preview{
   padding: 15px;
   height: 200px;
+}
 
+.book-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.book_title{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 180px;
 }
