--- a/bookrade/src/css/navigation.css
+++ b/bookrade/src/css/navigation.css
@@ -41,7 +41,7 @@ html::-webkit-scrollbar-thumb {
 
 .header-1 {
   background: #fff;
-  padding: 1rem 5%;
+  padding: 0.5rem 5%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -98,6 +98,10 @@ html::-webkit-scrollbar-thumb {
 .header-1 .icons a:hover {
   color: var(--green);
 }
+
+.header-1 Menu {
+  margin-top: -10px;
+} 
 
 #search-btn {
   display: none;
