--- a/bookrade/src/css/navigation.css
+++ b/bookrade/src/css/navigation.css
@@ -94,12 +94,12 @@ html::-webkit-scrollbar-thumb {
 .header-1 .icons a {
   font-size: 2.5rem;
   margin: 1.5rem;
-  color: var(--black);
+  color: black;
   cursor: pointer;
 }
 
 .header-1 .icons div:hover,
-.header-1 .icons a:hover {
+.header-1 .icons a:hover, .bell-icon:hover {
   color: var(--green);
 }
 
